--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+
+html
+  height: 100%
+
+*
+  margin: 0
+  padding: 0
+
+body
+  height: 100vh
+  background-color: black
+  font-family: 'Roboto'
+  display: flex
+  flex-direction: column
+
+h1, h2
+  font-family: 'Chiro', sans-serif
+  text-align: center
+  color: white
+  font-weight: bolder
+  padding-top: 50px
+  margin-bottom: 20px
+
+p
+  width: 70%
+  border-radius: 5px
+  font-size: 16px
+  font-family: "roboto"
+  color: white
+  display: flex
+  align-items: center
+  justify-content: center
+  margin-left: auto
+  margin-right: auto
